[gd_scene load_steps=3 format=3 uid="uid://c7orqndgslsdv"]

[ext_resource type="Texture2D" uid="uid://c7ecxux7xtje8" path="res://Assets/Images/TempTorrN.jpg" id="1_umpn1"]
[ext_resource type="Script" path="res://DesktopController.gd" id="1_uxprf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uxprf")

[node name="Background" type="ColorRect" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 1216.0
offset_bottom = 704.0
color = Color(0, 0.435294, 0.733333, 1)

[node name="Taskbar" type="Panel" parent="."]
offset_top = 568.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="NumberPad" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 72.0
text = "Num"

[node name="FileManager" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 192.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 72.0
text = "Files"

[node name="Messenger" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 72.0
text = "MSG"

[node name="Requests" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 512.0
offset_bottom = 72.0
text = "MEMO"

[node name="Buttons" type="Button" parent="Taskbar"]
layout_mode = 0
offset_left = 576.0
offset_top = 8.0
offset_right = 640.0
offset_bottom = 72.0
text = "????"

[node name="Header" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 64.0

[node name="Clock" type="Panel" parent="Header"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0

[node name="Label" type="Label" parent="Header/Clock"]
layout_mode = 0
offset_top = 7.0
offset_right = 184.0
offset_bottom = 56.0
text = "Date: today
Time: N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveText" type="Label" parent="Header"]
layout_mode = 0
offset_left = 200.0
offset_top = 8.0
offset_right = 952.0
offset_bottom = 56.0
text = "Current Objetive:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Header"]
layout_mode = 0
offset_left = 976.0
offset_top = 8.0
offset_right = 1136.0
offset_bottom = 56.0
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(608, 288)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_umpn1")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="pressed" from="Taskbar/NumberPad" to="." method="DisplayNumpad"]
[connection signal="pressed" from="Taskbar/FileManager" to="." method="DisplayFileManager"]
[connection signal="pressed" from="Taskbar/Requests" to="." method="DisplayRequest"]
[connection signal="pressed" from="Taskbar/Buttons" to="." method="DisplayButtons"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
